--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,7 +4,12 @@ version = "0.1.0"
 edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[profile.release]
+lto = true
 
 [dependencies]
+anyhow = "*"
+exitcode = "*"
 serde = { version = "*", features = ["derive"] }
+serde_yaml = "*"
 serde_json = "*"
