Fork process to get playback time from mpv.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -10,6 +10,8 @@ lto = true
 [dependencies]
 anyhow = "*"
 exitcode = "*"
+fork = "*"
+libc = "*"
 serde = { version = "*", features = ["derive"] }
 serde_yaml = "*"
 serde_json = "*"
