Nix for waiting forked proc.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,8 @@ anyhow = "*"
 exitcode = "*"
 fork = "*"
 libc = "*"
+nix = "*"
 serde = { version = "*", features = ["derive"] }
-serde_yaml = "*"
 serde_json = "*"
+serde_yaml = "*"
+signal-hook = "*"
