--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,13 +8,10 @@ edition = "2021"
 lto = true
 
 [dependencies]
-anyhow = "*"
-chrono = "*"
-exitcode = "*"
-itertools = "0.10.5"
-lazy_static = "*"
-regex = "*"
-rusqlite = { version = "*", features = ["bundled"] }
-serde = { version = "*", features = ["derive"] }
-serde_yaml = "*"
-walkdir = "*"
+anyhow = "1.0.75"
+exitcode = "1.1.2"
+lazy_static = "1.4.0"
+regex = "1.10.2"
+serde = { version = "1.0.192", features = ["derive"] }
+serde_yaml = "0.9.27"
+anime-database-lib = { git = "https://github.com/Player01osu/anime-database-lib" }
